[package]
name = "molt-runtime-difflib"
version = "0.1.0"
publish = false
edition = "2024"
license = "Apache-2.0"
description = "difflib (SequenceMatcher, unified_diff, context_diff, ndiff) intrinsics for the Molt runtime."

[dependencies]
molt-runtime-core = { path = "../molt-runtime-core" }
molt-obj-model = { package = "molt-lang-obj-model", path = "../molt-obj-model" }
