[package]
name = "molt-runtime-http"
version = "0.1.0"
publish = false
edition = "2024"
license = "Apache-2.0"
description = "HTTP client/server, urllib, socketserver, cookies, ctypes, and logging configuration intrinsics for the Molt runtime."

[features]
default = ["tls"]
# `tls` adds rustls + webpki-roots so urlopen / HTTPSConnection can negotiate TLS.
# Disabling this feature drops all rustls code; HTTPS requests then raise OSError.
tls = ["dep:rustls", "dep:webpki-roots"]

[dependencies]
# Core runtime types used by the HTTP/logging implementations
molt-runtime-core = { path = "../molt-runtime-core" }
molt-obj-model = { package = "molt-lang-obj-model", path = "../molt-obj-model" }
libc = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "1.0", optional = true }
