[package]
name = "molt-runtime-math"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Math/numeric module group for the Molt runtime (math, cmath, fractions, colorsys, random, decimal)"

[dependencies]
# Core runtime types used by the math implementations
molt-runtime-core = { path = "../molt-runtime-core" }
molt-obj-model = { package = "molt-lang-obj-model", path = "../molt-obj-model" }

# Numeric deps
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
libm = "0.2"

# Optional crypto support (for statistics seed hashing)
digest = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = []
crypto = ["dep:digest", "dep:sha2"]
