[package]
name = "molt-runtime-net"
version = "0.1.0"
edition = "2021"

[dependencies]
molt-runtime-core = { path = "../molt-runtime-core" }
molt-obj-model = { package = "molt-lang-obj-model", path = "../molt-obj-model" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { version = "0.23", optional = true }
socket2 = { version = "0.6", optional = true }
mio = { version = "1.1", features = ["os-poll", "net"], optional = true }
rustls-pemfile = { version = "2.2", optional = true }
webpki-roots = { version = "1.0", optional = true }
tungstenite = { version = "0.28", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"], optional = true }

[features]
default = ["net"]
net = ["dep:rustls", "dep:socket2", "dep:mio", "dep:rustls-pemfile", "dep:webpki-roots", "dep:tungstenite"]
