[package]
name = "molt-runtime-path"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Path/OS intrinsics for the Molt runtime (pathlib.Path, os.walk, os.scandir, shutil extras)."

[dependencies]
# Core runtime types used by the path/os implementations
molt-runtime-core = { path = "../molt-runtime-core" }
molt-obj-model = { package = "molt-lang-obj-model", path = "../molt-obj-model" }
libc = "0.2"
